[UPD] 调整目录结构

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <div class="container">
     <div class="ico ico_eye"></div>
+    <div class="ico ico_lightening"></div>
   </div>
 </body>
 </html>
