--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Pure CSS Icon Set</title>
+   <link rel="stylesheet" type="text/css" href="./icons.css" />
    <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 <body>
