[UPD] 改用 em 为单位

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div class="container">
     <div class="ico ico_eye"></div>
     <div class="ico ico_lightening"></div>
+    <div class="ico ico_pencil"></div>
   </div>
 </body>
 </html>
