--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="ico ico_eye"></div>
     <div class="ico ico_lightening"></div>
     <div class="ico ico_pencil"></div>
+    <div class="ico ico_hamburger"></div>
   </div>
 </body>
 </html>
