[ADD] expand icon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="ico ico_lightening"></div>
     <div class="ico ico_pencil"></div>
     <div class="ico ico_hamburger"></div>
+    <div class="ico ico_expand"></div>
   </div>
 </body>
 </html>
