[ADD] cloud icon

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="ico ico_pencil"></div>
     <div class="ico ico_hamburger"></div>
     <div class="ico ico_expand"></div>
+    <div class="ico ico_cloud"></div>
   </div>
 </body>
 </html>
