--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="ico ico_hamburger"></div>
     <div class="ico ico_expand"></div>
     <div class="ico ico_cloud"></div>
+    <div class="ico ico_cloud2"></div>
   </div>
 </body>
 </html>
