--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="ico ico_expand"></div>
     <div class="ico ico_cloud"></div>
     <div class="ico ico_cloud2"></div>
+    <div class="ico ico_microphone"></div>
   </div>
 </body>
 </html>
