--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="ico ico_cloud"></div>
     <div class="ico ico_cloud2"></div>
     <div class="ico ico_microphone"></div>
+    <div class="ico ico_home"></div>
   </div>
 </body>
 </html>
