--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="ico ico_cloud2"></div>
     <div class="ico ico_microphone"></div>
     <div class="ico ico_home"></div>
+    <div class="ico ico_play"></div>
   </div>
 </body>
 </html>
