--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="ico ico_microphone"></div>
     <div class="ico ico_home"></div>
     <div class="ico ico_play"></div>
+    <div class="ico ico_pause"></div>
   </div>
 </body>
 </html>
