--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="ico ico_home"></div>
     <div class="ico ico_play"></div>
     <div class="ico ico_pause"></div>
+    <div class="ico ico_stop"></div>
   </div>
 </body>
 </html>
