--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="ico ico_play"></div>
     <div class="ico ico_pause"></div>
     <div class="ico ico_stop"></div>
+    <div class="ico ico_skip"></div>
   </div>
 </body>
 </html>
