--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="ico ico_pause"></div>
     <div class="ico ico_stop"></div>
     <div class="ico ico_skip"></div>
+    <div class="ico ico_fastforward"></div>
   </div>
 </body>
 </html>
