--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="ico ico_stop"></div>
     <div class="ico ico_skip"></div>
     <div class="ico ico_fastforward"></div>
+    <div class="ico ico_check"></div>
   </div>
 </body>
 </html>
