--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="ico ico_skip"></div>
     <div class="ico ico_fastforward"></div>
     <div class="ico ico_check"></div>
+    <div class="ico ico_check2 ico_check"></div>
   </div>
 </body>
 </html>
