[ADD] comment icon

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="ico ico_fastforward"></div>
     <div class="ico ico_check"></div>
     <div class="ico ico_check2 ico_check"></div>
+    <div class="ico ico_comment"></div>
   </div>
 </body>
 </html>
