--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="ico ico_check"></div>
     <div class="ico ico_check2 ico_check"></div>
     <div class="ico ico_comment"></div>
+    <div class="ico ico_calendar"></div>
   </div>
 </body>
 </html>
